--- a/mblog/templates/base.html
+++ b/mblog/templates/base.html
@@ -32,9 +32,10 @@
                     </div>
                     <div class="panel-body">
                         <div class="list-group">
-                            <a href="/" class="list-group-item">HOME</a>
-                            <a href="http://tar.so/news" class="list-group-item">时事新闻</a>
-                            <a href="http://drho.tw/news" class="list-group-item">电视新闻</a>
+                            <a href="/" class="list-group-item">主页</a>
+                            <a>友情链接</a>
+                            <a href="https://www.liaoxuefeng.com/" class="list-group-item">廖雪峰老师的博客</a>
+                            <a href="http://www.runoob.com/python3/python3-tutorial.html" class="list-group-item">菜鸟教程</a>
                         </div>
                         <script type="text/javascript" src="http://feedjit.com/serve/?vv=1515&amp;tft=3&amp;dd=0&amp;
                         wid=&amp;pid=0&amp;proid=0&amp;bc=FFFFFF&amp;tc=000000&amp;brd1=012B6B&amp;lnk=135D9E&amp;hc=FFFFFF&amp;
