--- a/mblog/templates/header.html
+++ b/mblog/templates/header.html
@@ -1,4 +1,5 @@
 <!--header.html-->
+{% load staticfiles %}
 <div class='well'>
-    <h1 style="font-family:微软雅黑;">欢迎光临 技术分享</h1>
+    <img src="{% static 'images/签名.jpg' %}" />
 </div>
