--- a/mblog/templates/post.html
+++ b/mblog/templates/post.html
@@ -1,11 +1,12 @@
 <!--post.html-->
 {% extends 'base.html' %}
+{% load markdown_deux_tags %}
 {% block title %}{{post.title}} - 技术分享 {% endblock %}
 {% block headmessage %}
     <h3 style="font-family:微软雅黑;">{{post.title}}</h3>
 {% endblock %}
 {% block content %}
         <p style="font-family:微软雅黑;font-size:12pt;letter-spacing:2pt;">
-            {{post.body}}
+            {{post.body | markdown}}
         </p>
 {% endblock %}
