--- a/mblog/templates/index.html
+++ b/mblog/templates/index.html
@@ -14,7 +14,7 @@
             </div>
             <div class="panel-body" style="background-color:#ffffdd">
                 <p>
-                    {{ post.body | truncatechars:40 }}
+                    {{ post.body | truncatechars:40 | cut:"#"}}
                 </p>
             </div>
             <div class="panel-footer" style="background-color:#efefef">
