添加背景音乐

--- a/mblog/templates/header.html
+++ b/mblog/templates/header.html
@@ -1,5 +1,10 @@
 <!--header.html-->
 {% load staticfiles %}
 <div class='well'>
-    <img src="{% static 'images/签名.jpg' %}" />
+    <img src="{% static 'images/xcn.jpg' %}" />
+	</br>
+	<audio controls autoplay="autoplay" loop="loop" hidden="hidden">
+		<source src="{% static 'music/qunianxiatian.mp3' type="audio/mpeg" %}">
+	<!--<audio controls autoplay="autoplay" loop="loop"><source src="{% static 'music/qunianxiatian.mp3' type="audio/mpeg" %}">
+	-->
 </div>
