添加图片到后台的超级链接；取消音乐自动播放。

--- a/mblog/templates/header.html
+++ b/mblog/templates/header.html
@@ -1,9 +1,8 @@
 <!--header.html-->
 {% load staticfiles %}
 <div class='well'>
-    <img src="{% static 'images/xcn.jpg' %}" />
-	</br>
-	<audio controls autoplay="autoplay" loop="loop" hidden="hidden">
+	<a href="/admin"><img src="{% static 'images/nv.jpg' %}" width="20%" /></a>
+	<audio controls loop="loop">
 		<source src="{% static 'music/qunianxiatian.mp3' type="audio/mpeg" %}">
 	<!--<audio controls autoplay="autoplay" loop="loop"><source src="{% static 'music/qunianxiatian.mp3' type="audio/mpeg" %}">
 	-->
