--- a/mblog/templates/base.html
+++ b/mblog/templates/base.html
@@ -36,6 +36,7 @@
                             <a>友情链接</a>
                             <a href="https://www.liaoxuefeng.com/" class="list-group-item">廖雪峰老师的博客</a>
                             <a href="http://www.runoob.com/python3/python3-tutorial.html" class="list-group-item">菜鸟教程</a>
+                            欢迎关注微信公众号：爱起世界
                         </div>
                         <script type="text/javascript" src="http://feedjit.com/serve/?vv=1515&amp;tft=3&amp;dd=0&amp;
                         wid=&amp;pid=0&amp;proid=0&amp;bc=FFFFFF&amp;tc=000000&amp;brd1=012B6B&amp;lnk=135D9E&amp;hc=FFFFFF&amp;
@@ -50,6 +51,7 @@
                         {% block headmessage %}{% endblock %}
                     </div>
                     <div class="panel-body">
+					    background-image:url(% static 'images/dldx.jpg' %)
                         {% block content %} {% endblock %}
                     </div>
                     <div class="panel-footer">
