--- a/mblog/templates/footer.html
+++ b/mblog/templates/footer.html
@@ -3,6 +3,6 @@
     {% if now %}
     <P style="font-family:微软雅黑;">现在时刻:{{now}}</P>
     {% else %}
-    <p style="font-family:微软雅黑;">本文版权归属王涛渊，转载请联系hdwangtaoyuan@126.com</p>
+    <p style="font-family:微软雅黑;">本文版权归属王涛渊，转载请联系hdwangtaoyuan@qq.com</p>
     {% endif %}
 {% endblock %}
