更改标签slug为author。但是author标签不能重复

--- a/mblog/templates/index.html
+++ b/mblog/templates/index.html
@@ -9,7 +9,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <p style="font-family:微软雅黑;font-size:14pt;font-weight:blod;">
-                    <a href="/post/{{post.slug}}">{{post.title}}</a>
+                    <a href="/post/{{post.author}}">{{post.title}}</a>
                 </p>
             </div>
             <div class="panel-body" style="background-color:#ffffdd">
