add main.html && modify profile.html

--- a/mblog/templates/profile.html
+++ b/mblog/templates/profile.html
@@ -3,14 +3,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>一个帅比</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>彩蛋</title>
 </head>
 <body>
 <div align="center">
-    </br></br></br></br></br></br>
-    <img src="{% static 'images/fkm.png' %}" width="20%" alt="聂拉报答耶特"/>
-    </br></br></br></br></br></br></br></br></br></br></br></br>
-    <img src="{% static 'images/profile.jpg' %}" width="20%" alt="QQ：846292076"/>
+    恭喜发现彩蛋</br>
+    扫码领取一元奖励</br>
+    <img src="{% static 'images/profile.jpg' %}" width="40%" alt="QQ：846292076"/>
+    </br>
+    <img src="{% static 'images/fkm.png' %}" width="40%" alt="聂拉报答耶特"/>
+
 
 </div>
 
