modify profile.html to wuhanjiayou

--- a/mblog/templates/profile.html
+++ b/mblog/templates/profile.html
@@ -4,15 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>彩蛋</title>
+    <title>武汉加油</title>
 </head>
 <body>
 <div align="center">
-    恭喜发现彩蛋</br>
-    扫码领取一元奖励</br>
-    <img src="{% static 'images/profile.jpg' %}" width="40%" alt="QQ：846292076"/>
+    <img src="{% static 'images/whjy.jfif' %}" width="40%" alt="武汉加油！中国加油！/>
     </br>
-    <img src="{% static 'images/fkm.png' %}" width="40%" alt="聂拉报答耶特"/>
 
 
 </div>
