--- a/mblog/templates/profile.html
+++ b/mblog/templates/profile.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div align="center">
-    <img src="{% static 'images/whjy.jfif' %}" width="40%" alt="武汉加油！中国加油！/>
+    <img src="{% static 'images/whjy.jfif' %}" width="40%" alt="武汉加油"/>
     </br>
 
 
